tests/ui/lint/snapshots/manual_extend_unrelated_statement_before_loop.snap
---
source: tests/ui/lint/mod.rs
---
  ● Element-by-element append
   ╭─[test.lis:6:3]
 5 │       let n = b.length()
 6 │ ╭─▶   for x in b {
 7 │ │       out = out.append(x)
 8 │ ├─▶   }
   · ╰──── can be one append
 9 │       let _ = out
   ╰────
  help: This loop appends one element per iteration, growing the slice each time. Spread the iterated slice to append all of it at once: `out = out.append(b...)` · code: [lint.manual_extend]
