tests/ui/lint/snapshots/manual_filter_option.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Manual `filter`
   ╭─[test.lis:4:11]
 3 │   let o: Option<int> = Some(1)
 4 │   let _ = match o {
   ·           ──┬──
   ·             ╰── can be simpler
 5 │     Some(x) if x > 0 => Some(x),
   ╰────
  help: Replace this `match` with `.filter(...)` · code: [lint.manual_filter]
