tests/ui/lint/snapshots/manual_find_field_access_predicate.snap
---
source: tests/ui/lint/mod.rs
---
  ● Filtered slice thrown away
   ╭─[test.lis:8:11]
 7 │   let users = [User { age: 17 }, User { age: 21 }]
 8 │   let _ = users.filter(|u| u.age > 18).get(0)
   ·           ─────────────────┬─────────────────
   ·                            ╰── can use `find`
 9 │ }
   ╰────
  help: `filter(...).get(0)` builds the whole filtered slice. Use `users.find(|u| u.age > 18)` to return the first match directly · code: [lint.manual_find]
